FRONTEND: Completar gestion-turnos, atender, visualizar-turnos y pendientes component

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.0.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "crypto-js": "^4.1.1",
     "ng-bootstrap": "^1.6.3",
     "ngx-tabset": "^2.2.0",
     "rxjs": "~7.8.0",
@@ -33,6 +34,7 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/localize": "^16.0.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
