--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "ng-bootstrap": "^1.6.3",
     "ngx-tabset": "^2.2.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
